test/corpus/diia.txt
=============
Hello, World!
=============

дія привітатись()
    друк("Привіт від Лесі")
кінець

привітатись()

---

(source_file
  (function_definition
    (identifier)
    (parameter_list)
    (function_block
      (function_call
        (identifier)
        (argument_list
          (string)))))
  (function_call
    (identifier)
    (argument_list)))


===
Add
===

дія додати(а число, б число)
    результат = 0

    результат += а

    результат += б

    вернути результат
кінець

додати(б=3, а=1)

---

(source_file
  (function_definition
    (identifier)
    (parameter_list
      (identifier)
      (identifier))
    (function_block
      (assign_statement
        (identifier)
        (number))
      (assign_statement
        (identifier)
        (identifier))
      (assign_statement
        (identifier)
        (identifier))
      (return_statement
        (identifier))))
  (function_call
    (identifier)
    (argument_list
      (identifier)
      (number)
      (identifier)
      (number))))

