test/corpus/Модуль.txt
================================================================================
Пустий модуль
================================================================================

модуль пустий
кінець

--------------------------------------------------------------------------------

(module
  (block
    (module_definition
      (identifier))))

================================================================================
Дати пустий модуль
================================================================================

модуль пустий
кінець

дати пустий

--------------------------------------------------------------------------------

(module
  (block
    (module_definition
      (identifier))
    (give_statement
      (symbol
        (identifier)))))

================================================================================
Взяти пустий модуль
================================================================================

взяти пустий

--------------------------------------------------------------------------------

(module
  (block
    (take_statement
      (symbol
        (identifier)))))

================================================================================
Взяти пустий модуль як щось
================================================================================

взяти пустий як я_не_пустий

--------------------------------------------------------------------------------

(module
  (block
    (take_statement
      (symbol
        (identifier))
      (as_statement
        (identifier)))))

================================================================================
Модуль з привітанням
================================================================================

модуль привітання
    дія привітатись(імʼя текст = "Лесі")
        друк("Привіт від %(імʼя)!")
    кінець

    дати привітатись
кінець

--------------------------------------------------------------------------------

(module
  (block
    (module_definition
      (identifier)
      (block
        (diia_definition
          (identifier)
          (parameter_list
            (parameter_entry
              (identifier)
              (type
                (primitive_type))
              (primitive
                (string))))
          (block
            (function_call
              (symbol
                (identifier))
              (argument_list
                (expression_sequence
                  (primitive
                    (string
                      (string_interpolation
                        (symbol
                          (identifier))))))))))
        (give_statement
          (symbol
            (identifier)))))))

================================================================================
Дати поза модулем
================================================================================

модуль привітання
    дія привітатись(імʼя текст = "Лесі")
        друк("Привіт від %(імʼя)!")
    кінець

    дати привітатись
кінець

дати привітання.привітатись

--------------------------------------------------------------------------------

(module
  (block
    (module_definition
      (identifier)
      (block
        (diia_definition
          (identifier)
          (parameter_list
            (parameter_entry
              (identifier)
              (type
                (primitive_type))
              (primitive
                (string))))
          (block
            (function_call
              (symbol
                (identifier))
              (argument_list
                (expression_sequence
                  (primitive
                    (string
                      (string_interpolation
                        (symbol
                          (identifier))))))))))
        (give_statement
          (symbol
            (identifier)))))
    (give_statement
      (symbol
        (identifier)
        (property
          (identifier))))))
