test/corpus/Паки.txt
================================================================================
Взяти з паків
================================================================================

взяти пак привіт

--------------------------------------------------------------------------------

(module
  (block
    (take_statement
      (cloud_pak_link
        (cloud_pak_prefix)
        (cloud_pak_name
          (identifier))
        (cloud_pak_version)))))

================================================================================
Взяти з бібліотеки
================================================================================

взяти біб читати

--------------------------------------------------------------------------------

(module
  (block
    (take_statement
      (symbol
        (identifier)))))

================================================================================
Взяти з проекту
================================================================================

взяти привіт

--------------------------------------------------------------------------------

(module
  (block
    (take_statement
      (symbol
        (identifier))
      (as_statement
        (identifier)))))

================================================================================
Взяти з проекту як щось
================================================================================

взяти привіт як суперпривіт

--------------------------------------------------------------------------------

(module
  (block
    (take_statement
      (symbol
        (identifier))
      (as_statement
        (identifier)))))

================================================================================
Взяти модуль з проекту
================================================================================

взяти привіт [привіт, від_Лесі]

--------------------------------------------------------------------------------

(module
  (block
    (take_statement
      (symbol
        (identifier))
      (as_statement
        (identifier)))))

================================================================================
Взяти модуль з проекту як щось
================================================================================

взяти привіт [привіт як суперпривіт, від_Лесі як від_Мавки]

--------------------------------------------------------------------------------

(module
  (block
    (take_statement
      (symbol
        (identifier))
      (as_statement
        (identifier)))))

================================================================================
Взяти з підпапки проекту
================================================================================

взяти назва_підпапки.інший_модуль

--------------------------------------------------------------------------------

(module
  (block
    (take_statement
      (symbol
        (identifier))
      (as_statement
        (identifier)))))
