test/corpus/Текст.txt
================================================================================
Привітання
================================================================================

"Привіт від Лесі!"

--------------------------------------------------------------------------------

(module
  (block
    (primitive
      (string))))

================================================================================
Привітання з інтерполяцією
================================================================================

"Привіт від %(імʼя)"

--------------------------------------------------------------------------------

(module
  (block
    (primitive
      (string
        (string_interpolation
          (symbol
            (identifier)))))))

================================================================================
Інтерполяція довільного виразу
================================================================================

"Довільне число + 2 = %(рандом() + 2)"

--------------------------------------------------------------------------------

(module
  (block
    (primitive
      (string
        (string_interpolation
          (binary_expression
            (function_call
              (symbol
                (identifier))
              (argument_list))
            (primitive
              (number))))))))

================================================================================
Лапки у тексті
================================================================================

"\"%(імʼя)\""

--------------------------------------------------------------------------------

(module
  (block
    (primitive
      (string
        (string_interpolation
          (symbol
            (identifier)))))))
