test/corpus/Функція.txt
================================================================================
Функція, що вертає пусто
================================================================================

(): пусто

--------------------------------------------------------------------------------

(module
  (block
    (function_expression
      (parameter_list)
      (primitive
        (empty)))))

================================================================================
Функція з привітанням
================================================================================

(): друк("Привіт від Лесі!")

--------------------------------------------------------------------------------

(module
  (block
    (function_expression
      (parameter_list)
      (function_call
        (symbol
          (identifier))
        (argument_list
          (expression_sequence
            (primitive
              (string))))))))
