test/corpus/Цикли.txt
================================================================================
Пустий цикл "поки"
================================================================================

поки а
кінець

--------------------------------------------------------------------------------

(module
  (block
    (while_statement
      (symbol
        (identifier)))))

================================================================================
Пустий цикл "перебрати"
================================================================================

перебрати а як _
кінець

--------------------------------------------------------------------------------

(module
  (block
    (for_statement
      (symbol
        (identifier)))))

================================================================================
Пустий цикл "перебрати" з "як"
================================================================================

перебрати а як елемент
кінець

--------------------------------------------------------------------------------

(module
  (block
    (for_statement
      (symbol
        (identifier))
      (as_statement
        (identifier)))))

======
Перебрати діапазон чисел
======

перебрати а..<б як х
  друк(х)
кінець

------


======
Перебрати діапазон чисел (складний)
======

перебрати 0..0.5..5 як х
  друк(х)
кінець

------
