test/corpus/Число.txt
================================================================================
Ціле число
================================================================================

1

--------------------------------------------------------------------------------

(module
  (block
    (primitive
      (number))))

================================================================================
Відʼємне ціле число
================================================================================

-7

--------------------------------------------------------------------------------

(module
  (block
    (unary_expression
      (primitive
        (number)))))

================================================================================
Дробове число
================================================================================

0.89213

--------------------------------------------------------------------------------

(module
  (block
    (primitive
      (number))))

================================================================================
Відʼємне дробове число
================================================================================

-3.149265

--------------------------------------------------------------------------------

(module
  (block
    (unary_expression
      (primitive
        (number)))))


======
Шістнадцяткове число
======

0ш11А53А

------

======
Відʼємне шістнадцяткове число
======

-0шА1А9А

------

======
Двійкове число
======

0д0

------


======
Відʼємне двійкове число
======

-0д1000101

------


